# efficientvit

./: pyproject.toml  requirements.txt  setup.py
efficientvit/models/efficientvit/: sam.py
