[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = ".vscode/.*"

[tool.isort]
profile = "black"
extend_skip = [".vscode", "coco", "assets/data"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.poetry.dependencies]
torchdiffeq = "^0.2.5"
torch-fidelity = "^0.3.0" 
torchmetrics = "^1.8.2"
torchprofile = "^0.0.4"
einops = "^0.8.0"
tqdm = "^4.67.1"
scipy = "^1.15.3"
diffusers = "^0.35.1"
omegaconf = "^2.3.0"
ipdb = "^0.13.13"
huggingface-hub = "^0.34.4"
transformers = "^4.56.0"
lvis = "^0.5.3"
scikit-image = "^0.25.2"
wandb = {extras = ["media"],version = "^0.21.3"}
